syntax = "proto3";
package selfchain.keyless;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "selfchain/keyless/params.proto";
import "selfchain/keyless/keygen.proto";
import "selfchain/keyless/wallet.proto";

option go_package = "selfchain/x/keyless/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/selfchain/keyless/params";
  }

  // Wallet queries a wallet by address
  rpc Wallet(QueryWalletRequest) returns (QueryWalletResponse) {
    option (google.api.http).get = "/selfchain/keyless/wallet/{address}";
  }

  // Wallets queries all wallets
  rpc Wallets(QueryWalletsRequest) returns (QueryWalletsResponse) {
    option (google.api.http).get = "/selfchain/keyless/wallets";
  }

  // PartyData queries TSS party data for a wallet
  rpc PartyData(QueryPartyDataRequest) returns (QueryPartyDataResponse) {
    option (google.api.http).get = "/selfchain/keyless/party_data/{wallet_address}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryWalletRequest is request type for the Query/Wallet RPC method.
message QueryWalletRequest {
  string address = 1;
}

// QueryWalletResponse is response type for the Query/Wallet RPC method.
message QueryWalletResponse {
  Wallet wallet = 1;
}

// QueryWalletsRequest is request type for the Query/Wallets RPC method.
message QueryWalletsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryWalletsResponse is response type for the Query/Wallets RPC method.
message QueryWalletsResponse {
  repeated Wallet wallets = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryPartyDataRequest is request type for the Query/PartyData RPC method.
message QueryPartyDataRequest {
  string wallet_address = 1;
}

// QueryPartyDataResponse is response type for the Query/PartyData RPC method.
message QueryPartyDataResponse {
  string wallet_address = 1;
  PartyData party_data = 2;
}